// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should renders 1`] = `
<button
  class="Button"
  type="button"
>
  Add
</button>
`;

exports[`Button component should spread additional class names 1`] = `
<button
  class="Button className1 className2"
  type="button"
>
  Add
</button>
`;
